[package]
name = "adf2html"
version = "0.2.2"
authors = ["Alexey Kropotkin"]
edition = "2021"

description = "This library provides a convenient way to build HTML document body from Atlassian Document Format (ADF) provided by Atlassian v3 API"

readme = "README.md"

repository = "https://github.com/romalexdoo/adf2html.git"

license = "MIT"

keywords = ["ADF", "Atlassian", "Jira"]

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = { version = "0.10.0", features = ["serde"] }
regex = "1.11.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
uuid = { version = "1.11.0", features = ["v4"] }
